Make ErrorProne run in Java 17